2007-12-16  Grace Kloba  <klobag@gmail.com>

Reviewed by Darin Adler.

        Fix http://bugs.webkit.org/show_bug.cgi?id=16433.
        Bug 16433: LOW_BANDWIDTH_DISPLAY build is broken

        * dom/Document.cpp:
        (WebCore::Document::Document):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::addLowBandwidthDisplayRequest):
        (WebCore::FrameLoader::switchOutLowBandwidthDisplayIfReady):


Canonical link: https://commits.webkit.org/22649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28784 268f45cc-cd09-0410-ab3c-d52691b4dbfc